Using Smartfloat, Java out of Memory